new version with amqp and bgp dump

--- a/nfacctd.conf
+++ b/nfacctd.conf
@@ -1,47 +1,35 @@
-! 20150214 - /etc/nfacct/nfacctd.conf - RMZ
+! 20160511 - /etc/nfacct/nfacctd.conf - RMZ
 
+! common settings
+debug: false
 daemonize: false
 nfacctd_port: 5678
 nfacctd_time_new: true
-debug: false
-
-plugins: mysql[all-in], mysql[all-out], mysql[if-in], mysql[if-out], mysql[asn-in], mysql[asn-out]
-
-pre_tag_map: /etc/nfacct/pretag.map
-pre_tag_filter[all-in]: 100-120
-pre_tag_filter[all-out]: 200-220
-pre_tag_filter[if-in]: 100-120
-pre_tag_filter[if-out]: 200-220
-pre_tag_filter[asn-in]: 100-120
-pre_tag_filter[asn-out]: 200-220
-
 geoip_ipv4_file: /etc/nfacct/GeoIP.dat
-
-aggregate[all-in]:  tag, tag2, in_iface, out_iface, proto, tcpflags, peer_dst_ip, peer_src_ip, src_host, dst_host, src_port, dst_port, src_as, dst_as, as_path, src_host_country, dst_host_country
-aggregate[all-out]: tag, tag2, in_iface, out_iface, proto, tcpflags, peer_dst_ip, peer_src_ip, src_host, dst_host, src_port, dst_port, src_as, dst_as, as_path, src_host_country, dst_host_country
-aggregate[if-in]: tag, tag2
-aggregate[if-out]: tag, tag2
-aggregate[asn-in]: tag2, src_as
-aggregate[asn-out]: tag2, dst_as
-
 plugin_buffer_size: 8960
 plugin_pipe_size: 40096000
 
 ! bgp settings
+nfacctd_as_new: bgp
 bgp_daemon: true
 bgp_daemon_ip: 1.1.1.7
 bgp_daemon_port: 179
 bgp_daemon_max_peers: 6
 bgp_aspath_radius: 60
 bgp_follow_default: 1
-nfacctd_as_new: bgp
 bgp_agent_map: /etc/nfacct/agent_to_peer.map
+bgp_table_dump_amqp_host: 10.0.0.1
+bgp_table_dump_amqp_user: pmacct 
+bgp_table_dump_amqp_passwd: xxxxxxxxxx
+bgp_table_dump_amqp_exchange: pmacct-bgp
+bgp_table_dump_amqp_routing_key: bgp-dump
+bgp_table_dump_refresh_time: 3600
 
 ! sql settings
-sql_host: 127.0.0.1
+sql_host: 10.0.0.2
 sql_db: pmacct
 sql_user: pmacct 
-sql_passwd: XXX
+sql_passwd: xxxxxxxx
 sql_optimize_clauses: true 
 sql_dont_try_update: true
 sql_multi_values: 16776192 
@@ -49,42 +37,119 @@ sql_table_type: bgp
 sql_table_version: 9
 sql_locking_style: row
 
-! sql all inbound
+! amqp settings
+amqp_host: 10.0.0.1
+amqp_user: pmacct 
+amqp_passwd: xxxxxxxxx
+amqp_exchange: pmacct
+
+! plugins instanciation
+plugins: mysql[all-in], mysql[all-out], mysql[if-in], mysql[if-out], mysql[asn-in], mysql[asn-out], amqp[if-in-amqp], amqp[if-out-amqp], amqp[if-in-amqp-byif], amqp[if-out-amqp-byif], amqp[if-in-amqp-bycust], amqp[if-out-amqp-bycust], amqp[asn-in-amqp], amqp[asn-out-amqp]
+
+! tag filtering
+pre_tag_map: /etc/nfacct/pretag.map
+pre_tag_filter[all-in]: 100-120
+pre_tag_filter[all-out]: 200-220
+pre_tag_filter[if-in]: 100-120
+pre_tag_filter[if-out]: 200-220
+pre_tag_filter[asn-in]: 100-120
+pre_tag_filter[asn-out]: 200-220
+pre_tag_filter[if-in-amqp]: 100-120
+pre_tag_filter[if-out-amqp]: 200-220
+pre_tag_filter[if-in-amqp-byif]: 100-120
+pre_tag_filter[if-out-amqp-byif]: 200-220
+pre_tag_filter[if-in-amqp-bycust]: 100-120
+pre_tag_filter[if-out-amqp-bycust]: 200-220
+pre_tag_filter[asn-in-amqp]: 100-120
+pre_tag_filter[asn-out-amqp]: 200-220
+
+! aggregate definitions
+aggregate[all-in]:  tag, tag2, in_iface, out_iface, proto, tcpflags, peer_dst_ip, peer_src_ip, src_host, dst_host, src_port, dst_port, src_as, dst_as, as_path, src_host_country, dst_host_country
+aggregate[all-out]: tag, tag2, in_iface, out_iface, proto, tcpflags, peer_dst_ip, peer_src_ip, src_host, dst_host, src_port, dst_port, src_as, dst_as, as_path, src_host_country, dst_host_country
+aggregate[if-in]: tag, tag2
+aggregate[if-out]: tag, tag2
+aggregate[asn-in]: tag2, src_as
+aggregate[asn-out]: tag2, dst_as
+aggregate[if-in-amqp-byif]: tag
+aggregate[if-out-amqp-byif]: tag
+aggregate[if-in-amqp-bycust]: tag2
+aggregate[if-out-amqp-bycust]: tag2
+aggregate[if-in-amqp]: tag, tag2
+aggregate[if-out-amqp]: tag, tag2
+aggregate[asn-in-amqp]: src_as
+aggregate[asn-out-amqp]: dst_as
+
+! amqp aggregates
+amqp_routing_key[if-in-amqp]: if-in-all
+amqp_refresh_time[if-in-amqp]: 60
+amqp_history[if-in-amqp]: 1m
+amqp_time_roundoff[if-in-amqp]: m
+
+amqp_routing_key[if-out-amqp]: if-out-all
+amqp_refresh_time[if-out-amqp]: 60
+amqp_history[if-out-amqp]: 1m
+amqp_time_roundoff[if-out-amqp]: m
+
+amqp_routing_key[if-in-amqp-byif]: if-in-byif
+amqp_refresh_time[if-in-amqp-byif]: 60
+amqp_history[if-in-amqp-byif]: 1m
+amqp_time_roundoff[if-in-amqp-byif]: m
+
+amqp_routing_key[if-out-amqp-byif]: if-out-byif
+amqp_refresh_time[if-out-amqp-byif]: 60
+amqp_history[if-out-amqp-byif]: 1m
+amqp_time_roundoff[if-out-amqp-byif]: m
+
+amqp_routing_key[if-in-amqp-bycust]: if-in-bycust
+amqp_refresh_time[if-in-amqp-bycust]: 60
+amqp_history[if-in-amqp-bycust]: 1m
+amqp_time_roundoff[if-in-amqp-bycust]: m
+
+amqp_routing_key[if-out-amqp-bycust]: if-out-bycust
+amqp_refresh_time[if-out-amqp-bycust]: 60
+amqp_history[if-out-amqp-bycust]: 1m
+amqp_time_roundoff[if-out-amqp-bycust]: m
+
+amqp_routing_key[asn-in-amqp]: asn-in
+amqp_refresh_time[asn-in-amqp]: 60
+amqp_history[asn-in-amqp]: 1m
+amqp_time_roundoff[asn-in-amqp]: m
+
+amqp_routing_key[asn-out-amqp]: asn-out
+amqp_refresh_time[asn-out-amqp]: 60
+amqp_history[asn-out-amqp]: 1m
+amqp_time_roundoff[asn-out-amqp]: m
+
+! sql aggregates
 sql_refresh_time[all-in]: 60
 sql_history[all-in]: 1m
 sql_history_roundoff[all-in]: m
 sql_table[all-in]: netflow_in_hour
 
-! sql all outbound 
 sql_refresh_time[all-out]: 60
 sql_history[all-out]: 1m
 sql_history_roundoff[all-out]: m
 sql_table[all-out]: netflow_out_hour
 
-! sql if inbound
 sql_refresh_time[if-in]: 60
 sql_history[if-in]: 1m
 sql_history_roundoff[if-in]: m
 sql_table[if-in]: netflow_if_in
 
-! sql if outbound
 sql_refresh_time[if-out]: 60
 sql_history[if-out]: 1m
 sql_history_roundoff[if-out]: m
 sql_table[if-out]: netflow_if_out
 
-! sql asn inbound
 sql_refresh_time[asn-in]: 60
 sql_history[asn-in]: 1m
 sql_history_roundoff[asn-in]: m
 sql_preprocess[asn-in]: minb = 30000
 sql_table[asn-in]: netflow_asn_in
 
-! sql asn outbound
 sql_refresh_time[asn-out]: 60
 sql_history[asn-out]: 1m
 sql_history_roundoff[asn-out]: m
 sql_preprocess[asn-out]: minb = 30000
 sql_table[asn-out]: netflow_asn_out
-
 
